<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        tools:context=".view.RectangleActivity">
    <TextView
            android:text="@string/rectangle"
            android:textSize="35sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="24dp">
        <RadioButton
                android:id="@+id/radioButtonSides"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/sides" />
        <RadioButton
                android:id="@+id/radioButtonCoords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coords" />
    </RadioGroup>
    <LinearLayout
            android:layout_marginTop="100dp"
            android:visibility="gone"
            android:id="@+id/sides_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:gravity="center"
                android:id="@+id/width_et"
                android:hint="@string/width_hint"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <EditText
                android:gravity="center"
                android:id="@+id/height_et"
                android:hint="@string/height_hint"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="100dp"
            android:visibility="gone"
            android:id="@+id/coords_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
            <EditText
                    android:inputType="number"
                    android:gravity="center"
                    android:id="@+id/x1_et"
                    android:layout_weight="1"
                    android:hint="@string/x1_hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:inputType="number"
                    android:gravity="center"
                    android:id="@+id/y1_et"
                    android:hint="@string/y1_hint"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
            <EditText
                    android:gravity="center"
                    android:id="@+id/x2_et"
                    android:hint="@string/x2_hint"
                    android:inputType="number"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:gravity="center"
                    android:id="@+id/y2_et"
                    android:hint="@string/y2_hint"
                    android:inputType="number"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:text="@string/calculate"
            android:id="@+id/calculate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_marginTop="16dp"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/square_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_marginTop="16dp"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/perimeter_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>