<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:context=".view.TriangleActivity">

    <TextView
            android:text="@string/triangle"
            android:textSize="35sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/a_hint"
            android:inputType="number"
            android:id="@+id/a_et"/>
    <EditText
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/b_hint"
            android:inputType="number"
            android:id="@+id/b_et"/>
    <EditText
            android:gravity="center"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/c_hint"
            android:id="@+id/c_et"/>
    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/calculate"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calculate_button"/>
    <TextView
            android:layout_marginTop="16dp"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/square_text"/>
    <TextView
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/perimeter_text"/>
</LinearLayout>